# ARTEMIS

./: pyproject.toml
docs/: supervisor-usage.md
supervisor/: config.py  supervisor.py
supervisor/orchestration/: orchestrator.py
